--- a/src/views/clientes.ejs
+++ b/src/views/clientes.ejs
@@ -9,30 +9,46 @@
 </head>
 
 <body>
-    <%- include('partials/header.ejs') %> 
+    <%- include('partials/header.ejs') %>
         <div class="container" style="margin-top: 20px;">
             <div class="row">
                 <div class="col-md-8">
                     <table class="table table-hover">
                         <thead>
                             <tr>
-                                <th scope="col">ID</th>
-                                <th scope="col">Nombre</th>
-                                <th scope="col">correo</th>
-                                <th scope="col">contraseña</th>
-                                <th scope="col">direccion</th>
+                                <th>ID</th>
+                                <th>Nombre</th>
+                                <th>Email</th>
+                                <th>Acciones</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="table-active">
-                                <th scope="row">Active</th>
-                                <td>Column content</td>
-                                <td>Column content</td>
-                                <td>Column content</td>
-                                <td>Column content</td>
-                            </tr>
+                            <% if (data.length> 0) { %>
+                                <% data.forEach(cliente=> { %>
+                                    <tr>
+                                        <td>
+                                            <%= cliente.id_cliente %>
+                                        </td>
+                                        <td>
+                                            <%= cliente.nombre %>
+                                        </td>
+                                        <td>
+                                            <%= cliente.correo %>
+                                        </td>
+                                        <td>
+                                            <a href="/cltedit<%= cliente.id %>">Editar</a>
+                                            <a href="/cltdelete<%= cliente.id %>">Eliminar</a>
+                                        </td>
+                                    </tr>
+                                    <% }); %>
+                                        <% } else { %>
+                                            <tr>
+                                                <td colspan="4">No hay clientes registrados</td>
+                                            </tr>
+                                            <% } %>
                         </tbody>
                     </table>
+
                 </div>
                 <div class="col-md-4">
                     <form action="/clientes" method="POST">
@@ -46,17 +62,20 @@
                         </div>
                         <div class="form-group">
                             <label for="contraseña">Contraseña</label>
-                            <input type="password" class="form-control" id="contraseña" name="contraseña" placeholder="Contraseña">
+                            <input type="password" class="form-control" id="contraseña" name="contraseña"
+                                placeholder="Contraseña">
                         </div>
                         <div class="form-group">
                             <label for="direccion">Direccion</label>
-                            <input type="text" class="form-control" id="direccion" name="direccion" placeholder="Direccion">
+                            <input type="text" class="form-control" id="direccion" name="direccion"
+                                placeholder="Direccion">
                         </div>
                         <button type="submit" class="btn btn-primary">Agregar</button>
                     </form>
                 </div>
             </div>
-        </div></div>
+        </div>
+        </div>
 
         <%- include('partials/footer.ejs') %>
 </body>
