--- a/src/views/clientes.ejs
+++ b/src/views/clientes.ejs
@@ -36,8 +36,8 @@
                                             <%= cliente.correo %>
                                         </td>
                                         <td>
-                                            <a href="/cltedit<%= cliente.id %>">Editar</a>
-                                            <a href="/cltdelete<%= cliente.id %>">Eliminar</a>
+                                            <button href="/cltedit<%= cliente.id %>" type="button" class="btn btn-outline-warning">Editar</button>
+                                            <button href="/cltdelete<%= cliente.id %>" type="button" class="btn btn-outline-danger">Eliminar</button>
                                         </td>
                                     </tr>
                                     <% }); %>
@@ -51,7 +51,7 @@
 
                 </div>
                 <div class="col-md-4">
-                    <form action="/clientes" method="POST">
+                    <form action="/cltsave" method="POST">
                         <div class="form-group">
                             <label for="nombre">Nombre</label>
                             <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre">
@@ -70,7 +70,9 @@
                             <input type="text" class="form-control" id="direccion" name="direccion"
                                 placeholder="Direccion">
                         </div>
-                        <button type="submit" class="btn btn-primary">Agregar</button>
+                        <div class="form-group" style="margin-top: 20px;">
+                            <button type="submit" class="btn btn-success">Agregar</button>
+                        </div>
                     </form>
                 </div>
             </div>
