--- a/src/views/articulos.ejs
+++ b/src/views/articulos.ejs
@@ -101,13 +101,15 @@
                         <div class="form-group">
                             <label for="categoria">Categoría</label>
                             <select class="form-control" id="categoria" name="categoria">
-                                <% if (typeof categorias !== 'undefined' && categorias.length > 0) { %>
-                                    <% categorias.forEach(categoria => { %>
-                                        <option value="<%= categoria.id_categoria %>"><%= categoria.nombre %></option>
-                                    <% }); %>
-                                <% } else { %>
-                                    <option value="">No hay categorías disponibles</option>
-                                <% } %>
+                                <% if (typeof categorias !=='undefined' && categorias.length> 0) { %>
+                                    <% categorias.forEach(categoria=> { %>
+                                        <option value="<%= categoria.id_categoria %>">
+                                            <%= categoria.nombre %>
+                                        </option>
+                                        <% }); %>
+                                            <% } else { %>
+                                                <option value="">No hay categorías disponibles</option>
+                                                <% } %>
                             </select>
                         </div>
                         <div class="form-group" style="margin-top: 20px;">
@@ -137,10 +139,22 @@
                         // Reemplazar los textos por campos de texto
                         tr.find(".nombre").html(`<input type="text" class="form-control" value="${nombre}">`);
                         tr.find(".descripcion").html(`<input type="text" class="form-control" value="${descripcion}">`);
-                        tr.find(".tipo").html(`<input type="text" class="form-control" value="${tipo}">`);
+                        tr.find(".tipo").html(`
+                            <select class="form-control">
+                                <option value="Mueble" ${tipo === 'Mueble' ? 'selected' : ''}>Mueble</option>
+                                <option value="Decoración" ${tipo === 'Decoración' ? 'selected' : ''}>Decoración</option>
+                                <option value="Otro" ${tipo === 'Otro' ? 'selected' : ''}>Otro</option>
+                            </select>
+                        `);
                         tr.find(".precio").html(`<input type="number" step="0.01" class="form-control" value="${precio}">`);
                         tr.find(".existencia").html(`<input type="number" class="form-control" value="${existencia}">`);
-                        tr.find(".categoria").html(`<input type="number" class="form-control" value="${categoria}">`);
+                        tr.find(".categoria").html(`
+                            <select class="form-control">
+                                <% categorias.forEach(categoria => { %>
+                                    <option value="<%= categoria.id_categoria %>" ${categoria.id_categoria == categoria ? 'selected' : ''}><%= categoria.nombre %></option>
+                                <% }); %>
+                            </select>
+                        `);
 
                         // Reemplazar el botón de editar con los botones de guardar y cancelar
                         $(this).replaceWith(`
@@ -155,11 +169,12 @@
 
                         // Restaurar los valores originales
                         tr.find(".nombre").text(tr.find(".nombre input").val());
+                        tr.find(".tipo").text(tr.find(".tipo select").val());
                         tr.find(".descripcion").text(tr.find(".descripcion input").val());
-                        tr.find(".tipo").text(tr.find(".tipo input").val());
                         tr.find(".precio").text(tr.find(".precio input").val());
                         tr.find(".existencia").text(tr.find(".existencia input").val());
-                        tr.find(".categoria").text(tr.find(".categoria input").val());
+                        tr.find(".categoria").text(tr.find(".categoria select").val());
+                        tr.find(".existencia").text(tr.find(".existencia input").val());
 
                         // Reemplazar los botones
                         $(this).replaceWith(`<button class="btn btn-outline-warning editar-btn" data-id="${id}">Editar</button>`);
@@ -172,10 +187,12 @@
                         var tr = $("#articulo-" + id);
                         var nombre = tr.find(".nombre input").val().trim();
                         var descripcion = tr.find(".descripcion input").val().trim();
-                        var tipo = tr.find(".tipo input").val().trim();
+                        var tipo = tr.find(".tipo select").val();
+                        console.log(tipo);
                         var precio = tr.find(".precio input").val().trim();
                         var existencia = tr.find(".existencia input").val().trim();
-                        var categoria = tr.find(".categoria input").val().trim();
+                        var categoria = tr.find(".categoria select").val();
+                        console.log(categoria);
                         var guardarBtn = $(this);
 
                         // Enviar los datos al servidor para guardar en la base de datos
