--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -27,6 +27,11 @@
                         <span class="visually-hidden">(current)</span>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/pedidos">Pedidos
+                        <span class="visually-hidden">(current)</span>
+                    </a>
+                </li>
             </ul>
             <form class="d-flex">
                 <input class="form-control me-sm-2" type="search" placeholder="Search">
